--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <h1 class="title">DJ 3maj's Mixtapes</h1>
     <nav>
       <a href="https://www.instagram.com/jazar_todorovic" target="_blank">Instagram</a>
+      <a href="https://soundcloud.com/sablast" target="_blank">Soundcloud</a>
       <a href="https://dj3maj.bandcamp.com/" target="_blank">Bandcamp</a>
       <a href="https://www.youtube.com/channel/UCV0Ct2K8UEzcAM_uzePhpJA" target="_blank">YouTube</a>
-      <a href="https://soundcloud.com/sablast" target="_blank">Soundcloud</a>
       <a href="https://www.mixcloud.com/dj-3maj" target="_blank">Mixcloud</a>
     </nav>
   </header>
@@ -164,7 +164,7 @@
       <p>Experimental mix recorded live that tries to place our humanity in this mysterious cosmos.</p>
       <img class="mix-image" src="./assets/images/black and white space city.jpg" alt="Black and white photo of a space station">
       <figure>
-        <figcaption>Listen to <a href="https://soundcloud.com/sablast/beyond-space-time-and-scale-without-origin-destination-and-ending-dj-3maj-mix" target="_blank"> "Beyond space, time and scale; Without origin, destination and ending"</a> by DJ 3maj:</figcaption>
+        <figcaption>Listen to <a href="https://soundcloud.com/sablast/beyond-space-time-and-scale-without-origin-destination-and-ending-dj-3maj-mix" target="_blank"> Beyond space, time and scale; Without origin, destination and ending</a> by DJ 3maj:</figcaption>
         <audio onplay="listenOnPlay('soundcloud.com/sablast/beyond-space-time-and-scale-without-origin-destination-and-ending-dj-3maj-mix')" controls controlsList="nodownload">
           <source src="./assets/audio/alien - dj 3maj mix.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
@@ -204,8 +204,8 @@
       <h2>Glowing Ambition</h3>
       <img class="mix-image" src="./assets/images/disco-square.jpg" alt="Black and white photo of people dancing">
       <figure>
-        <figcaption>Listen to <a href="https://www.mixcloud.com/dj-3maj/mister-magic-dj-3maj-mix/" target="_blank"> Glowing Ambition</a> by DJ 3maj:</figcaption>
-        <audio onplay="listenOnPlay('mixcloud.com/dj-3maj/mister-magic-dj-3maj-mix')" controls controlsList="nodownload">
+        <figcaption>Listen to <a href="https://soundcloud.com/sablast/glowing-ambition-dj-3maj-mix" target="_blank"> "Glowing Ambition"</a> by DJ 3maj:</figcaption>
+        <audio onplay="listenOnPlay('soundcloud.com/sablast/glowing-ambition-dj-3maj-mix')" controls controlsList="nodownload">
           <source src="./assets/audio/Glowing Ambition - DJ 3maj MIX.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
@@ -236,6 +236,39 @@
       </ol>
     </article>
       
+    <article>
+      <h2>Funk Power</h3>
+      <img class="mix-image" src="./assets/images/funk power.jpg" alt="People dancing on the street at summertime.">
+      <figure>
+        <figcaption>Listen to <a href="https://soundcloud.com/sablast/funk-power-dj-3maj-mix" target="_blank"> "Funk Power"</a> by DJ 3maj:</figcaption>
+        <audio onplay="listenOnPlay('soundcloud.com/sablast/funk-power-dj-3maj-mix')" controls controlsList="nodownload">
+          <source src="./assets/audio/Funk Power  - DJ 3maj MIX.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
+      </figure>
+      
+      <h3>Tracklist:</h3>
+      <ol>
+        <li>Let's Start ( Fela Kuti Cover ) by Jungle Fire</li>
+        <li>Sorcerer by Big Band Katowice</li>
+        <li>Give Me Your Love by Third Coast Kings</li>
+        <li>Papa Don't Take No Mess by James Brown</li>
+        <li>Soul Power by Maceo And The Macks</li>
+        <li>Strike by Orgone</li>
+        <li>Jungle Boogie by Kool & The Gang</li>
+        <li>Fencewalk by Mandrill</li>
+        <li>Malik by Lafayette Afro-Rock Band</li>
+        <li>Soul Dynamite by The Sound Stylistics</li>
+        <li>The Seduction by AIFF</li>
+        <li>Jeannie's Get Down by The Sure Fire Soul Ensemble</li>
+        <li>Squib Cakes by Tower Of Fire</li>
+        <li>I Need Some Money by Eddie Harris</li>
+        <li>My Man Is A Mean Man by Sharon Jones And The Dap-Kings</li>
+        <li>Silverdome by Lettuce</li>
+        <li>Hit It And Quit It by Funkadelic</li>
+      </ol>
+    </article>
+
   </main>
 
   <footer>
