are you dancing yet mixtape

--- a/index.html
+++ b/index.html
@@ -269,6 +269,35 @@
       </ol>
     </article>
 
+    <article>
+      <h2>Are you dancing yet?</h3>
+      <img class="mix-image" src="./assets/images/are you dancing yet.jpg" alt="Three people dancing.">
+      <figure>
+        <figcaption>Listen to <a href="https://soundcloud.com/sablast/are-you-dancing-yet-dj-3maj-mix" target="_blank"> "Are you dancing yet?"</a> by DJ 3maj:</figcaption>
+        <audio onplay="listenOnPlay('soundcloud.com/sablast/are-you-dancing-yet-dj-3maj-mix')" controls controlsList="nodownload">
+          <source src="./assets/audio/Are you dancing yet - DJ 3maj MIX.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
+      </figure>
+      
+      <h3>Tracklist:</h3>
+      <ol>
+        <li>It's Just Begun by The Jimmy Castor Bunch</li>
+        <li>Give It Up Turn It Loose ( The Reflex Edit ) by James Brown</li>
+        <li>Noko Hewon by Afla Sackey & Afrik Bawantu</li>
+        <li>Let's Start The Dance by Hamilton Bohannon</li>
+        <li>High on Your Love Suite: One Mo Hit (Of Your Love) by Rick James</li>
+        <li>Dancing Into Starts by Logg</li>
+        <li>Jealousy by Martin Solveig</li>
+        <li>Foot Stompin Music by Bohannon</li>
+        <li>Git It All by Mandrill</li>
+        <li>I'm Satisfied ( Underdog Edit ) by James Brown</li>
+        <li>Jive Man by Exit 9</li>
+        <li>Pocket Change by Lettuce</li>
+        <li>Let Me by Santana</li>
+      </ol>
+    </article>
+
   </main>
 
   <footer>
