--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
     </article>
     
     <article>
-      <h2>Invitation For A Revelation</h3>
-      <img class="mix-image" src="./assets/images/internal flight.png" alt="Monk siting at the window.">
+      <h2>Invitation For A Revelation</h2>
+      <p class="about">A story made from song titles.</p>
+      <img class="mix-image" src="./assets/images/story.PNG" alt="Short story.">
       <figure>
         <figcaption>Listen to <a href="https://soundcloud.com/sablast/invitation-for-a-revelation-dj-3maj-mix" target="_blank">"Invitation For A Revelation"</a> by DJ 3maj:</figcaption>
         <audio onplay="listenOnPlay('soundcloud.com/sablast/invitation-for-a-revelation-dj-3maj-mix')" controls controlsList="nodownload">
@@ -76,7 +77,7 @@
     </article>
 
     <article>
-      <h2>For the girls that go to The University of Applied Arts</h3>
+      <h2>For the girls that go to The University of Applied Arts</h2>
       <p class="about">Inspired by the good time I had on a boat under a glowing bridge in Belgrade.</p>
       <img class="mix-image" src="./assets/images/rose on a golden coin.jpg" alt="Rose on a golden coin.">
       <figure>
@@ -89,7 +90,7 @@
     </article>
 
       <article class="future-funk">
-        <h2>Fabulous Future Funk Freakout</h3>
+        <h2>Fabulous Future Funk Freakout</h2>
         <p class="about">Inspired by Daft Punk's Discovery and Homework albums.</p>
         <img class="mix-image" src="./assets/images/dragon vaporwave square.jpg" alt="Dragon over a floating city ilustration in vaporwave aestetic.">
         <figure>
@@ -122,7 +123,7 @@
       </article>
 
       <article class="waking-up">
-        <h2>Waking Up</h3>
+        <h2>Waking Up</h2>
         <p class="about">This is the music I play to start my day. Good vibes and gradual build-up of energy. Enjoy!</p>
         <img class="mix-image" src="./assets/images/sunrise in zemun.jpg" alt="Sunrise in Zemun, Belgrade, Serbia.">
         <figure>
@@ -153,7 +154,7 @@
       </article>
 
       <article>
-        <h2>Hali Gali</h3>
+        <h2>Hali Gali</h2>
         <p class="about">“HALI GALI is a personal approach to the scene, a response to a stalemate, a non-existent space, and infrastructure that everyone complains about. It is a forest fire that is spreading uncontrollably and showing the middle finger to all who hate. A crazy ride of diversity that annoys your neighbors. HALI GALI is a fair of art and energy that we live.”</p>
         <img class="mix-image" src="./assets/images/hali gali tuti fruti.jpg" alt="Guy carried by the crowd at a Hali Gali concert.">
         <figure>
@@ -178,7 +179,7 @@
       </article>
 
     <article>
-      <h2>Beyond space, time and scale<br>Without origin, destination and ending</h3>
+      <h2>Beyond space, time and scale<br>Without origin, destination and ending</h2>
       <p>Experimental mix recorded live that tries to place our humanity in this mysterious cosmos.</p>
       <img class="mix-image" src="./assets/images/black and white space city.jpg" alt="Black and white photo of a space station">
       <figure>
@@ -219,7 +220,7 @@
     </article>
 
     <article>
-      <h2>Glowing Ambition</h3>
+      <h2>Glowing Ambition</h2>
       <img class="mix-image" src="./assets/images/disco-square.jpg" alt="Black and white photo of people dancing">
       <figure>
         <figcaption>Listen to <a href="https://soundcloud.com/sablast/glowing-ambition-dj-3maj-mix" target="_blank"> "Glowing Ambition"</a> by DJ 3maj:</figcaption>
@@ -255,7 +256,7 @@
     </article>
       
     <article>
-      <h2>Funk Power</h3>
+      <h2>Funk Power</h2>
       <img class="mix-image" src="./assets/images/funk power.jpg" alt="People dancing on the street at summertime.">
       <figure>
         <figcaption>Listen to <a href="https://soundcloud.com/sablast/funk-power-dj-3maj-mix" target="_blank"> "Funk Power"</a> by DJ 3maj:</figcaption>
@@ -288,7 +289,7 @@
     </article>
 
     <article>
-      <h2>Are you dancing yet?</h3>
+      <h2>Are you dancing yet?</h2>
       <img class="mix-image" src="./assets/images/are you dancing yet.jpg" alt="Three people dancing.">
       <figure>
         <figcaption>Listen to <a href="https://soundcloud.com/sablast/are-you-dancing-yet-dj-3maj-mix" target="_blank"> "Are you dancing yet?"</a> by DJ 3maj:</figcaption>
