future funk playlist

--- a/index.html
+++ b/index.html
@@ -100,25 +100,34 @@
           Your browser does not support the audio element.
           </audio>
         </figure>
-        <p>Shoutout to all of the talented musicians featured in this mix:</p>
-        <ul>
-          <li><a href="https://soundcloud.com/vanilla" target="_blank">soundcloud.com/vanilla</a></li>
-          <li><a href="https://soundcloud.com/shadleypeterson" target="_blank">soundcloud.com/shadleypeterson</a></li>
-          <li><a href="https://soundcloud.com/capecoral" target="_blank">soundcloud.com/capecoral</a></li> 
-          <li><a href="https://soundcloud.com/doktorplekter" target="_blank">soundcloud.com/doktorplekter</a></li> 
-          <li><a href="https://soundcloud.com/risonam" target="_blank">soundcloud.com/risonam</a></li> 
-          <li><a href="https://soundcloud.com/ev-exi" target="_blank">soundcloud.com/ev-exi</a></li> 
-          <li><a href="https://soundcloud.com/tendencies" target="_blank">soundcloud.com/tendencies</a></li> 
-          <li><a href="https://soundcloud.com/mrprouxdomine" target="_blank">soundcloud.com/mrprouxdomine</a></li> 
-          <li><a href="https://soundcloud.com/acidente" target="_blank">soundcloud.com/acidente</a></li> 
-          <li><a href="https://soundcloud.com/flamingosis" target="_blank">soundcloud.com/flamingosis</a></li> 
-          <li><a href="https://soundcloud.com/aritusmusic" target="_blank">soundcloud.com/aritusmusic</a></li> 
-          <li><a href="https://soundcloud.com/soliterre" target="_blank">soundcloud.com/soliterre</a></li> 
-          <li><a href="https://soundcloud.com/thoughts-7" target="_blank">soundcloud.com/thoughts-7</a></li> 
-          <li><a href="https://soundcloud.com/season-team" target="_blank">soundcloud.com/season-team</a></li> 
-          <li><a href="https://soundcloud.com/yunibasaruwa" target="_blank">soundcloud.com/yunibasaruwa</a></li> 
-          <li><a href="https://soundcloud.com/supersex420" target="_blank">soundcloud.com/supersex420</a></li> 
-        </ul>
+        <p>Tracklist:</p>
+        <ol>
+          <li><a target="_blank" href="https://soundcloud.com/vanilla">Vanilla</a> - Suede</li>
+          <li><a target="_blank" href="https://soundcloud.com/shadleypeterson">Shadley Peterson</a> - Cowabunga</li>
+          <li><a target="_blank" href="https://soundcloud.com/shadleypeterson">Shadley Peterson</a> - Dolphins On Molly</li>
+          <li><a target="_blank" href="https://soundcloud.com/shadleypeterson">Shadley Peterson</a> - Paradize</li>
+          <li><a target="_blank" href="https://soundcloud.com/capecoral">Cape Coral</a> - Better Ways</li>
+          <li><a target="_blank" href="https://soundcloud.com/doktorplekter">Doktor Plekter</a> - BitterSync</li>
+          <li><a target="_blank" href="https://soundcloud.com/shadleypeterson">Shadley Peterson</a> - Marcus Funkee ( w/ Luminessence )</li>
+          <li><a target="_blank" href="https://soundcloud.com/risonam">Risonam</a> - Fake Perfume</li>
+          <li><a target="_blank" href="https://soundcloud.com/doktorplekter">Doktor Plekter</a> - Kraftfull</li>
+          <li><a target="_blank" href="https://soundcloud.com/ev-exi">ev.exi</a> - Remember</li>
+          <li><a target="_blank" href="https://soundcloud.com/tendencies">Tendencies</a> - Footsteps ( w/ <a href="soundcloud.com/supersex420">Supersex420</a> )</li>
+          <li><a target="_blank" href="https://soundcloud.com/tendencies">Tendencies</a> - Small Clone</li>
+          <li><a target="_blank" href="https://soundcloud.com/mrprouxdomine">Proux</a> - VHS Loving</li>
+          <li><a target="_blank" href="https://soundcloud.com/acidente">acidente</a> - Gotta Go Crazy</li>
+          <li><a target="_blank" href="https://soundcloud.com/acidente">acidente</a> - Vibrato</li>
+          <li><a target="_blank" href="https://soundcloud.com/flamingosis">Flamingosis</a> x <a href="soundcloud.com/tendencies">Tendencies</a> - Hidden Crush</li>
+          <li><a target="_blank" href="https://soundcloud.com/mrprouxdomine">Proux</a> - Funk Express</li>
+          <li><a target="_blank" href="https://soundcloud.com/aritusmusic">Aritus</a> - Summer With You</li>
+          <li><a target="_blank" href="https://soundcloud.com/soliterre">Soliterre</a> - Up To You</li>
+          <li><a target="_blank" href="https://soundcloud.com/thoughts-7">コンシャスTHOUGHTS</a> - I Miss You</li>
+          <li><a target="_blank" href="https://soundcloud.com/season-team">Season</a> - Move me</li>
+          <li><a target="_blank" href="https://soundcloud.com/yunibasaruwa">Yuni Wa</a> - 7 Waves</li>
+          <li><a target="_blank" href="https://soundcloud.com/ev-exi">ev.exi</a> - Transition</li>
+          <li><a target="_blank" href="https://soundcloud.com/mrprouxdomine">Proux</a> - Sullivan</li>
+          <li><a target="_blank" href="https://www.youtube.com/channel/UC_kRDKYrUlrbtrSiyu5Tflg">Daft Punk</a> - Crescendolls</li>
+        </ol>
         <p>Awesome illustration was done by <a href="https://surudenise.com" target="_blank">Denise Rashidi</a>.</p>
       </article>
 
