hunger and strife

--- a/index.html
+++ b/index.html
@@ -39,6 +39,38 @@
   </header>
 
   <main>
+    <article id="hunger-and-strife">
+      <h2>Hunger and Strife</h2>
+      <p class="about">Layered percussion, ominous ambiance, and unforgiving hard drums provide the perfect club workout.</p>
+      <img class="mix-image" src="./assets/images/hunger and strife.jpg" alt="Pinhead from the movie Hellraiser.">
+      <figure>
+        <figcaption>Listen to <a href="https://soundcloud.com/sablast/hunger-and-strife-dj-3maj-mix" target="_blank">"Hunger and Strife"</a> by DJ 3maj:</figcaption>
+        <audio onplay="listenOnPlay('soundcloud.com/sablast/hunger-and-strife-dj-3maj-mix')" controls controlsList="nodownload">
+          <source src="./assets/audio/Hunger and Strife - DJ 3maj MIX.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
+      </figure>
+      <h3>Tracklist:</h3>
+      <ol>
+        <li><a href="https://soundcloud.com/nic_as_well" target="_blank">Nic As Well</a> - Morcego</li>
+        <li><a href="https://soundcloud.com/eventhestrong/sets/ets007-syn-temper" target="_blank">Syn</a> – Cold</li>
+        <li><a href="https://soundcloud.com/tensiontrax" target="_blank">Tension</a> - Trials</li>
+        <li><a href="https://soundcloud.com/ovidmusic" target="_blank">ovid</a> - Dustbringer</li>
+        <li><a href="https://soundcloud.com/ozwalddublin" target="_blank">Ozwald</a> - Sex Drum</li>
+        <li><a href="https://soundcloud.com/ozwalddublin" target="_blank">Ozwald</a> - Prey</li>
+        <li><a href="https://soundcloud.com/ozwalddublin" target="_blank">Ozwald</a> - Faust</li>
+        <li><a href="https://soundcloud.com/nkc" target="_blank">NKC</a> - BTD150</li>
+        <li><a href="https://soundcloud.com/dreemtrans" target="_blank">Dreem Tran's</a> - Imunne</li>
+        <li><a href="https://soundcloud.com/nostro-hood-system/sets/va-waystation-compilation" target="_blank">Noire</a> - Rage Riddim</li>
+        <li><a href="https://soundcloud.com/ovidmusic" target="_blank">ovid</a> - Pressure Plate</li>
+        <li><a href="https://soundcloud.com/doubt_tx" target="_blank">Doubt</a> - EMDR</li>
+        <li><a href="https://soundcloud.com/djdoublem94" target="_blank">MM</a> - Terrible Muscle</li>
+        <li><a href="https://soundcloud.com/doubt_tx" target="_blank">Doubt</a> - HD Tool</li>
+        <li><a href="https://soundcloud.com/deejay_jm" target="_blank">DJ JM</a> - Sorriso</li>
+        <li><a href="https://soundcloud.com/djdoublem94" target="_blank">MM</a> - Constricted</li>
+      </ol>
+    </article>
+
     <article>
       <h2>Luton - I Don't Know, Sweetheart ( DJ 3maj Remix )</h3>
       <img class="mix-image" src="./assets/images/don draperjpg.jpg" alt="Don Draper in his empty penthouse after his wife left him.">
