added noire soundcloud link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <li><a href="https://soundcloud.com/ozwalddublin" target="_blank">Ozwald</a> - Faust</li>
         <li><a href="https://soundcloud.com/nkc" target="_blank">NKC</a> - BTD150</li>
         <li><a href="https://soundcloud.com/dreemtrans" target="_blank">Dreem Tran's</a> - Imunne</li>
-        <li><a href="https://soundcloud.com/nostro-hood-system/sets/va-waystation-compilation" target="_blank">Noire</a> - Rage Riddim</li>
+        <li><a href="https://soundcloud.com/noire_uk" target="_blank">Noire</a> - Rage Riddim</li>
         <li><a href="https://soundcloud.com/ovidmusic" target="_blank">ovid</a> - Pressure Plate</li>
         <li><a href="https://soundcloud.com/doubt_tx" target="_blank">Doubt</a> - EMDR</li>
         <li><a href="https://soundcloud.com/djdoublem94" target="_blank">MM</a> - Terrible Muscle</li>
