added syn soundcloud link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <h3>Tracklist:</h3>
       <ol>
         <li><a href="https://soundcloud.com/nic_as_well" target="_blank">Nic As Well</a> - Morcego</li>
-        <li><a href="https://soundcloud.com/eventhestrong/sets/ets007-syn-temper" target="_blank">Syn</a> – Cold</li>
+        <li><a href="https://soundcloud.com/syn6syn" target="_blank">Syn</a> – Cold</li>
         <li><a href="https://soundcloud.com/tensiontrax" target="_blank">Tension</a> - Trials</li>
         <li><a href="https://soundcloud.com/ovidmusic" target="_blank">ovid</a> - Dustbringer</li>
         <li><a href="https://soundcloud.com/ozwalddublin" target="_blank">Ozwald</a> - Sex Drum</li>
