hali gali tracklist

--- a/index.html
+++ b/index.html
@@ -206,16 +206,26 @@
           </audio>
         </figure>
         <h3>New alternative in Belgrade:</h3>
-        <ul>
-          <li><a href="https://repetitor.bandcamp.com/" target="_blank">Repetitor</a></li>
-          <li><a href="https://prototip.bandcamp.com/" target="_blank">Prototip</a></li>
-          <li><a href="https://johanbrauer.bandcamp.com/" target="_blank">Johanbrauer</a></li>
-          <li><a href="https://vizeljbend.bandcamp.com/" target="_blank">Vizelj</a></li>
-          <li><a href="https://koikoi.bandcamp.com/" target="_blank">Koikoi</a></li>
-          <li><a href="https://sajzerbiterlemon.bandcamp.com/" target="_blank">Sajzerbiterlemon</a></li>
-          <li><a href="https://gazorpazorp1.bandcamp.com/" target="_blank">Gazorpazorp</a></li>
-          <li><a href="https://dogsinkavala.bandcamp.com/" target="_blank">Dogs in Kavala</a></li>
-        </ul>
+        <ol>
+          <li><a href="https://repetitor.bandcamp.com/" target="_blank">Repetitor</a> - Suzeni snovi</li>
+          <li><a href="https://johanbrauer.bandcamp.com/" target="_blank">Johanbrauer</a> - Tuko Ramirez</li>
+          <li><a href="https://vizeljbend.bandcamp.com/" target="_blank">Vizelj</a> - Glava u betonu</li>
+          <li><a href="https://koikoi.bandcamp.com/" target="_blank">KOIKOI</a> - Bog te ubio!</li>
+          <li><a href="https://repetitor.bandcamp.com/" target="_blank">Repetitor</a> - Sa izvora</li>
+          <li><a href="https://koikoi.bandcamp.com/" target="_blank">KOIKOI</a> - Misisipi</li>
+          <li><a href="https://repetitor.bandcamp.com/" target="_blank">Repetitor</a> - Crvena</li>
+          <li><a href="https://vizeljbend.bandcamp.com/" target="_blank">Vizelj</a> - Nepravda</li>
+          <li><a href="https://dogsinkavala.bandcamp.com/" target="_blank">Dogs in Kavala</a> - Savo</li>
+          <li><a href="https://sajzerbiterlemon.bandcamp.com/" target="_blank">Sajzerbiterlemon</a> - Metak</li>
+          <li><a href="https://prototip.bandcamp.com/" target="_blank">Prototip</a> - Nisam neko </li>
+          <li><a href="https://vizeljbend.bandcamp.com/" target="_blank">Vizelj</a> - Idemo Gore </li>
+          <li><a href="https://johanbrauer.bandcamp.com/" target="_blank">Johanbrauer</a> - Tundra</li>
+          <li><a href="https://prototip.bandcamp.com/" target="_blank">Prototip</a> - Iza vrata</li>
+          <li><a href="https://sajzerbiterlemon.bandcamp.com/" target="_blank">Sajzerbiterlemon</a> - O Idolima</li>
+          <li><a href="https://prototip.bandcamp.com/" target="_blank">Prototip</a> - Ne zelim to da budem</li>
+          <li><a href="https://gazorpazorp1.bandcamp.com/" target="_blank">Gazorpazorp</a> - Ne bojim se</li>
+          <li><a href="https://vizeljbend.bandcamp.com/" target="_blank">Vizelj</a> - Glamurozno Mononukleozni</li>
+        </ol>
         <p>Checkout Hali Gali <a href="https://www.youtube.com/watch?v=DkUVX2pKw2o" target="_blank">mockumentary</a> and <a href="https://haligali.bandcamp.com/releases" target="_blank">compilation</a>.</p>
       </article>
 
