added links to the alien tracklist

--- a/index.html
+++ b/index.html
@@ -242,30 +242,30 @@
       </figure>
       <h3>Samples used:</h3>
       <ol>
-        <li>Interstellar - Do Not Go Gentle Into That Good Night</li>
+        <li>Interstellar - <a href="https://www.youtube.com/watch?v=3_nprPycZow" target="_blank">Do Not Go Gentle Into That Good Night</a></li>
         <li>Ruby My Dear - Mezzotinto</li>
-        <li>Ant-Man Movie - Ant-man Goes To The Quantum Realm</li>
+        <li>Ant-Man Movie - <a href="https://www.youtube.com/watch?v=ulUMjqhbYPs" target="_blank">Ant-man Goes To The Quantum Realm</a></li>
         <li>Qebrµs - ⊶⊚⊖⬚⊟⊑∷༜⊚༜∷⊒⊞⬚⊖⊚⊷</li>
         <li>Jacob Collier - Clarity</li>
-        <li>Doctor Strange Movie - Open your eye</li>
+        <li>Doctor Strange Movie - <a href="https://www.youtube.com/watch?v=FkXlKQS5Elo" target="_blank">Open your eye</a></li>
         <li>Amon Tobin - Journeyman</li>
-        <li>The Matrix Movie - Neo Wakes Up In the Real World</li>
+        <li>The Matrix Movie - <a href="https://www.youtube.com/watch?v=NpyaKWY9HOc" target="_blank"> Neo Wakes Up In the Real World </a></li>
         <li>Filmmaker - Bot Cells</li>
-        <li>Area 51 Phone call on a radio show</li>
+        <li><a href="https://www.youtube.com/watch?v=sbugwnOE5jQ" target="_blank">Area 51 Phone call on a radio show</a></li>
         <li>Noisia - Collider</li>
-        <li>Annihilation movie - The Alien</li>
+        <li>Annihilation movie - <a href="https://www.youtube.com/watch?v=uBsJgceM0KI" target="_blank">Meeting the Alien</a></li>
         <li>Tron Legacy - Rectifier</li>
-        <li>War of the Worlds - The Eve of The War</li>
+        <li><a href="https://en.wikipedia.org/wiki/The_War_of_the_Worlds_(1938_radio_drama)" target="_blank">War of the Worlds Radio Drama</a></li>
         <li>Alien Isolation Game - Enter the Nest</li>
-        <li>Interstellar - Landing in the Tesseract scene</li>
+        <li>Interstellar - <a href="https://www.youtube.com/watch?v=iJio07EtKYc" target="_blank">Landing in the Tesseract scene</a></li>
         <li>Roisin Murphy - Simulation</li>
         <li>Amon Tobin - Red Moon</li>
         <li>Tim Hecker - Stab Variation</li>
-        <li>Interstellar - The Wormhole</li>
-        <li>Sergej Rachmaninoff - Prelude In G minor (Transcription by G.H. Federlein )</li>
-        <li>Carl Sagan - Pale Blue Dot</li>
+        <li>Interstellar - <a href="https://www.youtube.com/watch?v=69EUgdj7lzI" target="_blank">Through the Wormhole</a></li>
+        <li>Sergej Rachmaninoff - Prelude In G minor ( Transcription by G.H. Federlein )</li>
+        <li>Carl Sagan - <a href="https://en.wikipedia.org/wiki/Pale_Blue_Dot" target="_blank">Pale Blue Dot</a></li>
         <li>Gustav Holst - Neptune</li>
-        <li>Voyager Golden Record - Greetings From Earth</li>
+        <li><a href="https://en.wikipedia.org/wiki/Voyager_Golden_Record" target="_blank">Voyager Golden Record</a> - Greetings From Earth</li>
         <li>Tim Hecker - Radiance</li>
       </ol>
     </article>
