golden rose tracklist

--- a/index.html
+++ b/index.html
@@ -119,6 +119,24 @@
         Your browser does not support the audio element.
         </audio>
       </figure>
+      <h3>Tracklist:</h3>
+      <ol>
+        <li>Feel (feat. Lianne La Havas) - Jacob Collier</li>
+        <li>Moving Through Time - Angelo Badalamenti</li>
+        <li>About Time - Sabrina Claudio</li>
+        <li>Baby Powder - Jenevieve</li>
+        <li>Motorbike - Leon Bridges</li>
+        <li>Don't Play With My Heart - India Shawn</li>
+        <li>Mirage ( Don't Stop ) - Jessie Ware</li>
+        <li>Keep Moving - Jungle</li>
+        <li>Experience - Victoria Monét, Khalid & SG Lewis</li>
+        <li>Am I Wrong ( feat. ScHoolboy Q ) - Anderson .Paak </li>
+        <li>Uptown Funk ( feat. Bruno Mars ) - Mark Ronson</li>
+        <li>Make Me Feel -  Janelle Monáe</li>
+        <li>Skate - Bruno Mars, Anderson .Paak, Silk Sonic</li>
+        <li>Play That Funky Music - Wild Cherry</li>
+        <li>24K Magic - Bruno Mars</li>
+      </ol>
     </article>
 
       <article class="future-funk">
