replaced soundcloud links with youtube links

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <p class="about">Layered percussion, ominous ambiance, and unforgiving hard drums provide the perfect club workout.</p>
       <img class="mix-image" src="./assets/images/hunger and strife.jpg" alt="Pinhead from the movie Hellraiser.">
       <figure>
-        <figcaption>Listen to <a href="https://soundcloud.com/sablast/hunger-and-strife-dj-3maj-mix" target="_blank">"Hunger and Strife"</a> by DJ 3maj:</figcaption>
-        <audio onplay="listenOnPlay('soundcloud.com/sablast/hunger-and-strife-dj-3maj-mix')" controls controlsList="nodownload">
+        <figcaption>Listen to <a href="https://youtu.be/sDl_agvdOkY" target="_blank">"Hunger and Strife"</a> by DJ 3maj:</figcaption>
+        <audio onplay="listenOnPlay('Hunger and Strife')" controls controlsList="nodownload">
           <source src="./assets/audio/Hunger and Strife - DJ 3maj MIX.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
@@ -74,7 +74,7 @@
     <article>
       <h2>Luton - I Don't Know, Sweetheart ( DJ 3maj Remix )</h3>
       <img class="mix-image" src="./assets/images/don draperjpg.jpg" alt="Don Draper in his empty penthouse after his wife left him.">
-      <p>Listen on <a href="https://dj3maj.bandcamp.com/track/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">bandcamp</a>, <a href="https://soundcloud.com/sablast/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">soundcloud</a> or <a href="https://www.youtube.com/watch?v=-Dwu1XNMaV8" target="_blank">youtube</a>.</p>
+      <p>Listen on <a href="https://dj3maj.bandcamp.com/track/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">bandcamp</a>, <a href="https://soundcloud.com/sablast/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">soundcloud</a> or <a href="https://youtu.be/-Dwu1XNMaV8" target="_blank">youtube</a>.</p>
     </article>
     
     <article>
@@ -82,8 +82,8 @@
       <p class="about">A story made from song titles.</p>
       <img class="mix-image" src="./assets/images/story.PNG" alt="Short story.">
       <figure>
-        <figcaption>Listen to <a href="https://soundcloud.com/sablast/invitation-for-a-revelation-dj-3maj-mix" target="_blank">"Invitation For A Revelation"</a> by DJ 3maj:</figcaption>
-        <audio onplay="listenOnPlay('soundcloud.com/sablast/invitation-for-a-revelation-dj-3maj-mix')" controls controlsList="nodownload">
+        <figcaption>Listen to <a href="https://youtu.be/F7CdB9loo2Y" target="_blank">"Invitation For A Revelation"</a> by DJ 3maj:</figcaption>
+        <audio onplay="listenOnPlay('Invitation For A Revelation')" controls controlsList="nodownload">
           <source src="./assets/audio/invitation for a revelation - dj 3maj mix.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
@@ -144,13 +144,13 @@
         <p class="about">Inspired by Daft Punk's Discovery and Homework albums.</p>
         <img class="mix-image" src="./assets/images/dragon vaporwave square.jpg" alt="Dragon over a floating city ilustration in vaporwave aestetic.">
         <figure>
-          <figcaption>Listen to <a href="https://soundcloud.com/sablast/fabulous-future-funk-freakout-dj-3maj-mix" target="_blank">"Fabulous Future Funk Freakout"</a> by DJ 3maj:</figcaption>
-          <audio onplay="listenOnPlay('soundcloud.com/sablast/fabulous-future-funk-freakout-dj-3maj-mix')" controls controlsList="nodownload">
+          <figcaption>Listen to <a href="https://youtu.be/GNh7IS8O5Jo" target="_blank">"Fabulous Future Funk Freakout"</a> by DJ 3maj:</figcaption>
+          <audio onplay="listenOnPlay('Fabulous Future Funk Freakout')" controls controlsList="nodownload">
             <source src="./assets/audio/Fabulous Future Funk Freakout - Dj 3maj MIX.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
           </audio>
         </figure>
-        <p>Tracklist:</p>
+        <h3>Tracklist:</h3>
         <ol>
           <li><a target="_blank" href="https://soundcloud.com/vanilla">Vanilla</a> - Suede</li>
           <li><a target="_blank" href="https://soundcloud.com/shadleypeterson">Shadley Peterson</a> - Cowabunga</li>
@@ -217,8 +217,8 @@
         <p class="about">“HALI GALI is a personal approach to the scene, a response to a stalemate, a non-existent space, and infrastructure that everyone complains about. It is a forest fire that is spreading uncontrollably and showing the middle finger to all who hate. A crazy ride of diversity that annoys your neighbors. HALI GALI is a fair of art and energy that we live.”</p>
         <img class="mix-image" src="./assets/images/hali gali tuti fruti.jpg" alt="Guy carried by the crowd at a Hali Gali concert.">
         <figure>
-          <figcaption>Listen to <a href="https://soundcloud.com/sablast/hali-gali-dj-3maj-mix" target="_blank"> "Hali Gali"</a> by DJ 3maj:</figcaption>
-          <audio onplay="listenOnPlay('soundcloud.com/sablast/hali-gali-dj-3maj-mix')" controls controlsList="nodownload">
+          <figcaption>Listen to <a href="https://youtu.be/Q2XzDe5gURg" target="_blank"> "Hali Gali"</a> by DJ 3maj:</figcaption>
+          <audio onplay="listenOnPlay('Hali Gali')" controls controlsList="nodownload">
             <source src="./assets/audio/domaca scena mixtape v2.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
           </audio>
@@ -252,8 +252,8 @@
       <p>Experimental mix recorded live that tries to place our humanity in this mysterious cosmos.</p>
       <img class="mix-image" src="./assets/images/black and white space city.jpg" alt="Black and white photo of a space station">
       <figure>
-        <figcaption>Listen to <a href="https://soundcloud.com/sablast/beyond-space-time-and-scale-without-origin-destination-and-ending-dj-3maj-mix" target="_blank"> Beyond space, time and scale; Without origin, destination and ending</a> by DJ 3maj:</figcaption>
-        <audio onplay="listenOnPlay('soundcloud.com/sablast/beyond-space-time-and-scale-without-origin-destination-and-ending-dj-3maj-mix')" controls controlsList="nodownload">
+        <figcaption>Listen to <a href="https://youtu.be/Onhtx8l296k" target="_blank"> Beyond space, time and scale; Without origin, destination and ending</a> by DJ 3maj:</figcaption>
+        <audio onplay="listenOnPlay('Beyond space, time and scale')" controls controlsList="nodownload">
           <source src="./assets/audio/alien - dj 3maj mix.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
@@ -292,8 +292,8 @@
       <h2>Glowing Ambition</h2>
       <img class="mix-image" src="./assets/images/disco-square.jpg" alt="Black and white photo of people dancing">
       <figure>
-        <figcaption>Listen to <a href="https://soundcloud.com/sablast/glowing-ambition-dj-3maj-mix" target="_blank"> "Glowing Ambition"</a> by DJ 3maj:</figcaption>
-        <audio onplay="listenOnPlay('soundcloud.com/sablast/glowing-ambition-dj-3maj-mix')" controls controlsList="nodownload">
+        <figcaption>Listen to <a href="https://youtu.be/-B0tdhqLeX4" target="_blank"> "Glowing Ambition"</a> by DJ 3maj:</figcaption>
+        <audio onplay="listenOnPlay('Glowing Ambition')" controls controlsList="nodownload">
           <source src="./assets/audio/Glowing Ambition - DJ 3maj MIX.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
