replace souldcloud embed with yt embed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <article>
       <h2>Daft Punk - Veridis Quo ( DJ 3maj Remix )</h2>
       <p class="about">EP is coming out on the <strong>1st of December</strong>. It's going to be a mixture of classical and electronic music, similar to this remix.</p>
-        <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1151403949&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
+      <iframe src="https://www.youtube.com/embed/-Uc7YJAhHgk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>Buy on <a href="https://dj3maj.bandcamp.com/track/daft-punk-veridis-quo-dj-3maj-remix" target="_blank">bandcamp</a>.</p>
       </article>
 
