changed buy to download

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h2>Daft Punk - Veridis Quo ( DJ 3maj Remix )</h2>
       <p class="about">EP is coming out on the <strong>1st of December</strong>. It's going to be a mixture of classical and electronic music, similar to this remix.</p>
       <iframe src="https://www.youtube.com/embed/-Uc7YJAhHgk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>Buy on <a href="https://dj3maj.bandcamp.com/track/daft-punk-veridis-quo-dj-3maj-remix" target="_blank">bandcamp</a>.</p>
+        <p>Download on <a href="https://dj3maj.bandcamp.com/track/daft-punk-veridis-quo-dj-3maj-remix" target="_blank">bandcamp</a>.</p>
       </article>
 
     <article id="hunger-and-strife">
@@ -78,7 +78,7 @@
       <h2>Luton - I Don't Know, Sweetheart ( DJ 3maj Remix )</h3>
         <iframe width="330" height="330" src="https://www.youtube.com/embed/-Dwu1XNMaV8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
-        <p>Buy on <a href="https://dj3maj.bandcamp.com/track/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">bandcamp</a>.</p>
+        <p>Download on <a href="https://dj3maj.bandcamp.com/track/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">bandcamp</a>.</p>
       </article>
     
     <article>
